# pstack

./: ChangeLog  Config.make.in  Makefile  Postamble.make  README  autogen.sh  configure.in  pstack-gdb.spec.in  rb_backtrace.patch
src/: Makefile  pstack-gdb.c  ruby
